--- a/project.config.json
+++ b/project.config.json
@@ -11,7 +11,7 @@
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "9.9.9",
+	"libVersion": "2.3.1",
 	"appid": "wxb44bc96298874a28",
 	"projectname": "UBI",
 	"isGameTourist": false,
@@ -24,13 +24,23 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "participants",
+					"pathName": "modules/party-gift-randomizer/pages/participants/participants"
+				}
+			]
 		}
 	}
 }
