--- a/project.config.json
+++ b/project.config.json
@@ -33,7 +33,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 6,
+			"current": 7,
 			"list": [
 				{
 					"id": -1,
@@ -74,7 +74,13 @@
 				{
 					"id": -1,
 					"name": "chooseGift",
-					"pathName": "modules/party-gift-randomizer/pages/chooseGift/chooseGift"
+					"pathName": "modules/party-gift-randomizer/pages/chooseGift/chooseGift",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "result",
+					"pathName": "modules/party-gift-randomizer/pages/result/result"
 				}
 			]
 		}
